[package]
name = "simple_test_case"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["fold", "full"] }

[dev-dependencies]
syn = { version = "1.0.86", features = ["fold", "full", "extra-traits"] }
tokio = { version = "1.7.1", features = ["rt", "macros", "rt-multi-thread"] }
