[package]
name = "simple_test_case"
version = "1.0.0"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/simple_test_case"
documentation = "https://docs.rs/simple_test_case"
readme = "README.md"
description = "A bare bones attribute macro for writing parameterised tests"
keywords      = ["test", "case", "tests", "unit", "testing", "testcase", "test_case"]
categories    = ["development-tools", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["rt", "macros", "rt-multi-thread"] }
